# REGExLFA

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: FiniteAutomaton.h  PostfixConverter.h  RegToken.h  Setup.h  State.h  StateAssembler.h  StateCluster.h  StateNode.h  Test.h  Tester.h  Thompson.h  UserWarn.h
src/: FiniteAutomaton.cpp  PostfixConverter.cpp  RegToken.cpp  Setup.cpp  StateAssembler.cpp  StateCluster.cpp  Tester.cpp  UserWarn.cpp
tests/: LFA-Assignment2_Regex_DFA_v2.json
